# sqlalchemy-cratedb

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGES.md  CLAUDE.md  CONTRIBUTING.md  DEVELOP.md  MANIFEST.in  NOTICE  README.md  backlog.md  bootstrap.sh  pyproject.toml  setup.py
.github/workflows/: codeql.yml  docs.yml  nightly.yml  release.yml  tests.yml
docs/: Makefile  advanced-querying.rst  conf.py  crud.rst  data-types.rst  dataframe.rst  getting-started.rst  index-all.rst  index.rst  inspection-reflection.rst  install.rst  migrate-from-crate-client.md  overview.rst  requirements.txt  support.md  working-with-types.rst
docs/_extra/: robots.txt
docs/by-example/: index.rst
examples/: README.md
src/crate/: __init__.py
src/crate/client/: tests.py
src/sqlalchemy_cratedb/: __init__.py  compiler.py  dialect.py  dialect_more.py  predicate.py  sa_version.py  util.py
src/sqlalchemy_cratedb/compat/: api13.py  core10.py  core14.py  core20.py  core21.py
src/sqlalchemy_cratedb/support/: __init__.py  model.py  pandas.py  polyfill.py  util.py
src/sqlalchemy_cratedb/type/: __init__.py  array.py  binary.py  geo.py  object.py  vector.py
tests/: __init__.py  array_test.py  bulk_test.py  compiler_test.py  conftest.py  connection_test.py  create_table_test.py  datetime_test.py  dialect_test.py  dict_test.py  docker-compose.yml  engine_test.py  function_test.py  insert_from_select_test.py  integration.py  match_test.py  query_caching.py  settings.py  test_dummy.py  test_error_handling.py  test_schema.py  test_support_model.py  test_support_pandas.py  test_support_polyfill.py  test_support_util.py  test_type_binary.py  update_test.py  util.py  vector_test.py  warnings_test.py
tests/assets/: locations.sql
